logs/pyqnet.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyQNet-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/qnet'...
Compiling './lib/python3.5/site-packages/qnet/callbacksender.py'...
***   File "./lib/python3.5/site-packages/qnet/callbacksender.py", line 23
    except Exception, err:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/qnet/channel.py'...
***   File "./lib/python3.5/site-packages/qnet/channel.py", line 185
    except KeyError, err:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/qnet/messageset.py'...
***   File "./lib/python3.5/site-packages/qnet/messageset.py", line 146
    except KeyError, err:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/qnet/network.py'...
***   File "./lib/python3.5/site-packages/qnet/network.py", line 167
    except KeyError, err:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/qnet/socketnetwork.py'...
***   File "./lib/python3.5/site-packages/qnet/socketnetwork.py", line 52
    except socket.error, err:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/qnet/stateless.py'...
***   File "./lib/python3.5/site-packages/qnet/stateless.py", line 21
    except KeyError, err:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/qnet/statistics.py'...
***   File "./lib/python3.5/site-packages/qnet/statistics.py", line 92
    print """Statistics:
	Messages:
		total count: %s
		total bytes: %s
		average bytes: %s
		average duration: %s
		average retries: %s
	Packages:
		total count: %s
		total bytes: %s
		average bytes: %s
		average duration: %s
		"""%(
                        
	         
		               
		               
		                 
		                    
		                   
	         
		               
		               
		                 
		                    
		  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/qnet/structure.py'...
***   File "./lib/python3.5/site-packages/qnet/structure.py", line 119
    except (TypeError,ValueError,struct.error), err:
                                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
